nashorn/test/script/basic/NASHORN-40.js.EXPECTED
SyntaxError:32:Expected an operand but found .
print(.foo)
      ^
SyntaxError:38:Expected an operand but found .
.bar = 3423;
^
